crates/ohno_macros_impl/tests/snapshots/derive_error_display__tests__a_positional_argument_is_scoped_and_parenthesized.snap
---
source: crates/ohno_macros/src/derive_error/display/mod.rs
expression: "lowered(parse_quote!\n{\n    #[display(\"{}\", count * 2)] struct T { count: u32, inner: ohno::OhnoCore }\n})"
---
fn message() {
    let _ = ::std::format!("{}", & (self.count * 2));
}
