crates/ohno_macros_impl/tests/snapshots/derive_error_display__tests__a_raw_identifier_is_offered_with_its_prefix.snap
---
source: crates/ohno_macros/src/derive_error/display/mod.rs
expression: "lowered(parse_quote!\n{\n    #[display(\"bad: {typ}\")] struct T\n    {\n        r#type: String, #[doc = \" ohno::generated-core@7f3d9c2a\"] ohno_core:\n        ohno::OhnoCore,\n    }\n})"
---
fn message() {
    let _ = "bad: {}";
}
::core::compile_error! {
    "unknown field `typ` in `#[display(...)]`, available fields: `r#type`"
}
