crates/ohno_macros_impl/tests/snapshots/derive_error_display__tests__a_static_template_lowers_to_a_literal.snap
---
source: crates/ohno_macros/src/derive_error/display/mod.rs
expression: "lowered(parse_quote!\n{ #[display(\"Static error message\")] struct T { inner: ohno::OhnoCore } })"
---
fn message() {
    let _ = "Static error message";
}
