crates/ohno_macros_impl/tests/snapshots/derive_error_display__tests__a_stray_closing_brace_stops_the_lowering.snap
---
source: crates/ohno_macros/src/derive_error/display/mod.rs
expression: "lowered(parse_quote!\n{\n    #[display(\"bad path: path}\")] struct T\n    { path: String, inner: ohno::OhnoCore }\n})"
---
::core::compile_error! {
    "`#[display(...)]` template has a `}` with no matching `{`. Open the placeholder, or write `}}` for a literal brace"
}
