crates/ohno_macros_impl/tests/snapshots/derive_error_display__tests__a_tuple_field_is_named_by_index.snap
---
source: crates/ohno_macros/src/derive_error/display/mod.rs
expression: "lowered(parse_quote!\n{ #[display(\"{0} and {}\", 1.abs())] struct T(String, i32, ohno::OhnoCore); })"
---
fn message() {
    let _ = ::std::format!("{} and {}", & self.0, & (self.1.abs()));
}
