crates/ohno_macros_impl/tests/snapshots/derive_error_display__tests__an_argument_may_call_a_method_of_self.snap
---
source: crates/ohno_macros/src/derive_error/display/mod.rs
expression: "lowered(parse_quote!\n{\n    #[display(\"{}\", describe())] struct T\n    { path: String, inner: ohno::OhnoCore }\n})"
---
fn message() {
    let _ = ::std::format!("{}", & (self.describe()));
}
