crates/ohno_macros_impl/tests/snapshots/derive_error_display__tests__an_unknown_argument_root_is_reported.snap
---
source: crates/ohno_macros/src/derive_error/display/mod.rs
expression: "lowered(parse_quote!\n{\n    #[display(\"bad path: {}\", pth.display())] struct T\n    { path: String, code: u32, inner: ohno::OhnoCore }\n})"
---
fn message() {
    let _ = ::std::format!("bad path: {}", & (self.pth.display()));
}
::core::compile_error! {
    "unknown field `pth` in `#[display(...)]`, available fields: `path`, `code`, `inner`"
}
