crates/ohno_macros_impl/tests/snapshots/derive_error_display__tests__an_unsupported_argument_root_is_reported.snap
---
source: crates/ohno_macros/src/derive_error/display/mod.rs
expression: "lowered(parse_quote!\n{\n    #[display(\"bad: {}\", Self::LABEL.len())] struct T\n    { inner: ohno::OhnoCore }\n})"
---
fn message() {
    let _ = ::std::format!("bad: {}", & (self.Self::LABEL.len()));
}
::core::compile_error! {
    "`#[display(...)]` positional arguments are implicitly scoped to `self`, so each argument must be rooted in a field or method of `self`"
}
