crates/ohno_macros_impl/tests/snapshots/derive_error_display__tests__escapes_are_resolved_for_a_literal_message.snap
---
source: crates/ohno_macros/src/derive_error/display/mod.rs
expression: "lowered(parse_quote!\n{ #[display(\"a {{literal}} brace\")] struct T { inner: ohno::OhnoCore } })"
---
fn message() {
    let _ = "a {literal} brace";
}
