crates/ohno_macros_impl/tests/snapshots/derive_error_display__tests__every_fault_in_one_template_is_reported_together.snap
---
source: crates/ohno_macros/src/derive_error/display/mod.rs
expression: "lowered(parse_quote!\n{\n    #[display(\"{one} {two}\", extra)] struct T\n    { path: String, inner: ohno::OhnoCore }\n})"
---
fn message() {
    let _ = "{} {}";
}
::core::compile_error! {
    "unknown field `one` in `#[display(...)]`, available fields: `path`, `inner`"
}
::core::compile_error! {
    "unknown field `two` in `#[display(...)]`, available fields: `path`, `inner`"
}
::core::compile_error! {
    "`#[display(...)]` argument is not consumed by any `{}` placeholder"
}
